--- a/buildspace_nft-based-game/package.json
+++ b/buildspace_nft-based-game/package.json
@@ -13,6 +13,7 @@
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "chai": "^4.3.7",
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0"
